# csv_to_parquet_polars

./: .gitignore  BUILD.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: build-wheels.yml
src/csv_to_parquet/: __init__.py  api.py  exceptions.py  models.py
