[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csv_to_parquet_polars"
version = "0.1.0"
description = "Python Polars implementation of CSV to Parquet conversion"
requires-python = ">=3.10"
dependencies = ["polars==1.30.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
